# bavy

./: .gitignore  Cargo.toml  README.md  build.sh  docker-compose.yml  havy_os  nx.json  package.json  relay  repomix-output.xml  run.sh  test_single_hart.exp  test_two_harts.exp  test_vm_hang.exp  test_vm_hang2.exp
.cargo/: config.toml
.github/workflows/: deploy.yml  release-assets.yml  release-riscv-vm.yml  release-trigger.yml
docs/: BootGuide.md  OpenSBI_Implementation_Plan.md  UnsafeAudit.md
fs/: cargo.toml  project.json
fs/root/: hello.txt  test.txt
fs/src/: main.rs
kernel/: CHANGELOG.md  Cargo.toml  README.md
kernel/src/: dns.rs  fs.rs  http.rs  init.rs  ipc.rs  klog.rs  lock.rs  main.rs  net.rs  scheduler.rs  scripting.rs  task.rs  tls.rs  tls12.rs  uart.rs  virtio_blk.rs  virtio_net.rs
kernel/src/cmd/: mod.rs
mkfs/root/etc/init.d/: klogd  startup  sysmond
mkfs/src/: main.rs
relay/: CHANGELOG.md  Cargo.toml  Dockerfile  app.json
relay/src/: gateway.rs  hub.rs  main.rs  peer.rs  protocol.rs  proxy.rs  stack.rs
riscv-vm/: CHANGELOG.md  Cargo.toml  README.md  build.rs  build.sh  cli.ts  index.ts  kernel  node-worker.ts  package.json  tsconfig.json  worker-utils.ts  worker.ts
riscv-vm/native/: .gitignore  index.d.ts  index.js  index.mjs
riscv-vm/src/: block.rs  block_cache.rs  bus.rs  clint.rs  console.rs  cpu.rs  dram.rs  dtb.rs  emulator.rs  hart.rs  lib.rs  lib.rs.bak  loader.rs  main.rs  microop.rs  mmu.rs  napi_bindings.rs  net_external.rs  net_webtransport.rs  plic.rs  sdboot.rs  services.rs  shared_mem.rs  snapshot.rs  uart.rs  virtio.rs  worker.rs
riscv-vm/src/cpu/: core.rs  csr.rs  execution.rs  mod.rs  types.rs
riscv-vm/src/devices/: clint.rs  d1_audio.rs  d1_display.rs  d1_emac.rs  d1_mmc.rs  d1_touch.rs  mod.rs  plic.rs  uart.rs
riscv-vm/src/devices/virtio/: block.rs  device.rs  gpu.rs  input.rs  mod.rs  net.rs  p9.rs  p9_wasm.rs  rng.rs
riscv-vm/src/engine/: block.rs  cache.rs  decoder.rs  microop.rs  mod.rs
riscv-vm/src/net/: async_backend.rs  external.rs  mod.rs  webtransport.rs
riscv-vm/src/sbi/: base.rs  console.rs  hsm.rs  ipi.rs  legacy.rs  mod.rs  rfence.rs  srst.rs  timer.rs
riscv-vm/src/virtio/: consts.rs
riscv-vm/src/vm/: emulator.rs  mod.rs  native.rs  wasm.rs
riscv-vm/tsup/: index.ts  tsup.core.cjs.ts  tsup.core.esm.ts  tsup.worker.ts
scripts/: generate-certs.sh
vm/: Cargo.toml
vm/src/: bus.rs  clint.rs  console.rs  cpu.rs  csr.rs  decoder.rs  dram.rs  emulator.rs  lib.rs  main.rs  mmu.rs  net.rs  net_tap.rs  net_ws.rs  plic.rs  uart.rs  virtio.rs
web/: Dockerfile  next.config.ts  package.json
web/public/: riscv_vm_bg.wasm
web/public/images/custom/: kernel
web/public/images/xv6/: kernel  kernel.asm
web/src/app/: globals.css  page.tsx
web/src/hooks/: useVM.ts
xv6/: fs.img
