[package]
name = "kernel"
version = "0.0.2"
edition = "2021"

[dependencies]
riscv = "0.10.1"
riscv-rt = "0.11.0"
panic-halt = "0.2.0"
linked_list_allocator = "0.10"


[dependencies.smoltcp]
version = "0.11"
default-features = false
features = [
    "medium-ethernet",
    "proto-ipv4",
    "socket-icmp",
    "socket-tcp",
    "socket-udp",
]

[profile.release]
strip = true
lto = true
