[package]
name = "relay"
version = "0.1.0"
edition = "2021"
description = "WebTransport Relay Server for RISC-V VM"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# WebTransport
wtransport = "0.6.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Error handling
anyhow = "1.0"

# Utilities
rand = "0.8"

# Serialization (if needed for structured messages)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smoltcp = "0.12.0"
