[package]
name = "riscv-vm"
version = "0.0.29"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
thiserror = "1.0"
hex = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
libc = "0.2"
goblin = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
sha2 = "0.10"
wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tun-tap = "0.1"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
tungstenite = "0.21"
# WebTransport for connecting to the relay
wtransport = { version = "0.6", features = ["dangerous-configuration"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "WebSocket", 
    "MessageEvent", 
    "BinaryType", 
    "ErrorEvent", 
    "CloseEvent",
    "WebTransport",
    "WebTransportOptions",
    "WebTransportHash",
    "WebTransportDatagramDuplexStream",
    "ReadableStream",
    "WritableStream",
    "ReadableStreamDefaultReader",
    "WritableStreamDefaultWriter",
    "console",
    "Window",
    "Navigator",
    "Worker"
] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

# Note: Release profile is defined at workspace root (Cargo.toml)
