[package]
name = "riscv-vm"
version = "0.6.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["gui"]
#  Enable Node.js native addon via napi-rs (for WebTransport in Node.js)
napi = ["napi-rs", "napi-derive"]
# Enable GUI window for framebuffer rendering
gui = ["minifb"]

[dependencies]
log = "0.4"
thiserror = "1.0"
hex = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
libc = "0.2"
goblin = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
sha2 = "0.10"
wasm-bindgen = "0.2"

# Cross-platform GPU rendering
wgpu = "24"

# napi-rs bindings (optional, for Node.js native addon)
napi-rs = { package = "napi", version = "2", features = ["async", "tokio_rt"], optional = true }
napi-derive = { version = "2", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
# Simple synchronous HTTP client for SD card URL downloads
ureq = { version = "2", features = ["tls"] }
tungstenite = "0.21"
# WebTransport for connecting to the relay
wtransport = { version = "0.6", features = ["dangerous-configuration"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
# Windowing for native GPU rendering
winit = "0.30"
pollster = "0.4"
# Simple framebuffer window (optional, for GUI feature)
minifb = { version = "0.27", optional = true }

# Unix-only dependencies (tun-tap doesn't support Windows)
[target.'cfg(all(not(target_arch = "wasm32"), unix))'.dependencies]
tun-tap = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "WebSocket", 
    "MessageEvent", 
    "BinaryType", 
    "ErrorEvent", 
    "CloseEvent",
    "WebTransport",
    "WebTransportOptions",
    "WebTransportHash",
    "WebTransportDatagramDuplexStream",
    "ReadableStream",
    "WritableStream",
    "ReadableStreamDefaultReader",
    "WritableStreamDefaultWriter",
    "console",
    "Window",
    "Navigator",
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "KeyboardEvent"
] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
send_wrapper = "0.6"

[build-dependencies]
# napi-build is always included but only used when napi feature is enabled
napi-build = "2"

# Note: Release profile is defined at workspace root (Cargo.toml)
